--- a/dev/less/modules/illustration-controls.less
+++ b/dev/less/modules/illustration-controls.less
@@ -105,6 +105,7 @@
 		width:100%;
 		bottom:5px;
 		left:5px;
+		position:fixed;
 		right:auto;
 		top:auto;
 
